Modify mobile text size

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -335,11 +335,11 @@ footer {
   align-items: flex-end;
   top: 79px;
   height: 301px;
-  color : rgb(255, 255, 255, 0.8);
+  color : rgb(255, 255, 255, 0.9);
   background-image: url("../../resources/images/footer.png");
   background-size: cover;
   background-position: right;
-  font-family : "Work Sans", sans-serif;
+  font-family : "Sigmar One", sans-serif;
   font-size: 0.8rem;
 }
 
@@ -348,5 +348,7 @@ footer {
     background-image: url("../../resources/images/footer-s.png");
     background-position: center;
     height: 200px;
+    font-size: 1.5rem;
+    justify-content: center;
   }
 }
