--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,14 +3,8 @@ html,
 body {
   font-family: "Work Sans", sans-serif;
   font-size: 16px;
+  line-height: 1.5;
   hyphens: none
-}
-
-.container-fluid {
-  width: 90%;
-  padding: 5px 0;
-  margin: 0 auto;
-  min-width: 610px;
 }
 
 .box {
@@ -18,6 +12,7 @@ body {
   padding: 20px 40px;
   margin: 0 auto;
   min-width: 610px;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -31,6 +26,7 @@ h2 {
   font-family: "Titan One", sans-serif;
   color : rgb(156, 19, 54);
   font-size: 2rem;
+  line-height: 1.2;
 }
 
 h3 {
@@ -42,6 +38,7 @@ h3 {
 a {
   color: inherit;
   cursor: pointer;
+  text-decoration: none;
 }
 
 a:hover {
@@ -155,17 +152,17 @@ header .button {
   color: rgb(156, 19, 54);
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (min-width: 481px) and (max-width: 1030px) {
   body {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
   }
 
   h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   h3 {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   header.box {
@@ -192,11 +189,11 @@ header .button {
   .btn-about-cv-tablet,
   .btn-contact-tablet,
   .language {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   body {
     font-size: 2rem;
   }
@@ -214,7 +211,7 @@ header .button {
 .introduction {
   width: 820px;
   position: fixed;
-  top: 118px;
+  top: 130px;
   left: 40px;
   padding: 20px;
   z-index: 7;
@@ -224,7 +221,7 @@ header .button {
 
 .email {
   position: fixed;
-  top: 60px;
+  top: 64px;
   right: 40px;
   padding: 20px;
   z-index: 6;
@@ -257,7 +254,7 @@ header .button {
   margin-left: -10px;
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (min-width: 481px) and (max-width: 1030px) {
   h1 {
     font-size: 55px;
     line-height: 1.01;
@@ -290,14 +287,14 @@ header .button {
 }
 
 .intro {
-  width: 70%;
+  width: 60%;
   margin: 30px auto;
 }
 
 .quote {
   font-family : "Titan One", sans-serif;
   font-size: 1rem;
-  width: 60%;
+  width: 50%;
   margin: 30px auto;
   padding: 0 10px;
   border-left: 6px solid rgb(156, 19, 54);
@@ -321,7 +318,7 @@ header .button {
   color: rgba(128, 128, 128, 1);
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (min-width: 481px) and (max-width: 1030px) {
   .content {
     top: 181px;
   }
@@ -331,13 +328,13 @@ header .button {
   }
 
   .quote {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     width: 80%;
   }
 
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   .quote {
     font-size: 2rem;
     width: 80%;
