--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,6 +35,10 @@ h3 {
   font-size: 1.5rem;
 }
 
+strong {
+  font-weight: bold;
+}
+
 a {
   color: inherit;
   cursor: pointer;
@@ -44,6 +48,7 @@ a {
 a:hover {
   text-decoration: none;
   color: inherit;
+  cursor: crosshair;
 }
 
 a:visited {
@@ -112,6 +117,7 @@ header .button {
 .btn-portfolio:hover {
   color: rgb(156, 19, 54);
   background-image: url();
+  cursor: crosshair;
 }
 
 .btn-about-cv,
@@ -134,6 +140,7 @@ header .button {
 .btn-contact:hover {
   color: rgb(156, 19, 54);
   background-image: url();
+  cursor: crosshair;
 }
 
 .language {
@@ -146,10 +153,12 @@ header .button {
 
 .english:hover {
   color: rgb(156, 19, 54);
+  cursor: crosshair;
 }
 
 .mandarin:hover {
   color: rgb(156, 19, 54);
+  cursor: crosshair;
 }
 
 @media only screen and (min-width: 481px) and (max-width: 1030px) {
@@ -229,6 +238,21 @@ header .button {
   background-color: rgb(255, 255, 255, 0.9);
 }
 
+.email-tablet {
+  display: none;
+  position: fixed;
+  top: 210px;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(156, 19, 54, 1);
+  padding: 20px 0;
+  z-index: 9;
+}
+
+.email-tablet h1 {
+  color: rgb(255, 255, 255);
+}
+
 .drop-menu {
   background-image: url("../../resources/images/drop-down.svg");
   background-repeat: no-repeat;
@@ -247,11 +271,30 @@ header .button {
 
 .drop-menu li {
   padding: 5px 0;
-  border-bottom: 1px solid rgb(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .drop-menu li:hover {
   margin-left: -10px;
+  cursor: crosshair;
+}
+
+.drop-menu-tablet {
+  display: none;
+  position: fixed;
+  top: 210px;
+  width: 100%;
+  background-color: rgba(156, 19, 54, 1);
+  font-family: "Sigmar One", sans-serif;
+  font-size: 1.3rem;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  z-index: 8;
+}
+
+.drop-menu-tablet li {
+  padding: 5px 0;
+  border-bottom: 1px solid rgb(255, 255, 255, 0.5);
 }
 
 @media only screen and (min-width: 481px) and (max-width: 1030px) {
