--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,6 @@ body {
   width: 100%;
   padding: 20px 40px;
   margin: 0 auto;
-  min-width: 610px;
   box-sizing: border-box;
 }
 
@@ -163,7 +162,7 @@ header .button {
 
 @media only screen and (min-width: 481px) and (max-width: 1030px) {
   body {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   h2 {
@@ -375,7 +374,7 @@ header .button {
   }
 
   .quote {
-    font-size: 0.8rem;
+    font-size: 1rem;
     width: 80%;
   }
 
@@ -404,17 +403,17 @@ footer {
   font-size: 0.8rem;
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (min-width: 481px) and (max-width: 1030px) {
   footer {
     background-image: url("../../resources/images/footer-s.png");
     background-position: center;
     height: 200px;
-    font-size: 1rem;
+    font-size: 0.8rem;
     justify-content: center;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   footer {
     font-size: 1.5rem;
   }
