--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -322,7 +322,7 @@ header .button {
   position: relative;
   top: 79px;
   max-width: 1200px;
-  min-height: 1024px;
+  min-height: 600px;
   margin: 0 auto;
   padding: 40px 0 80px 0;
   min-width: 610px;
@@ -395,7 +395,7 @@ footer {
   align-items: flex-end;
   top: 79px;
   height: 301px;
-  color : rgb(255, 255, 255, 0.9);
+  color : rgba(255, 255, 255, 0.9);
   background-image: url("../../resources/images/footer.png");
   background-size: cover;
   background-position: right;
@@ -417,4 +417,21 @@ footer {
   footer {
     font-size: 0.8rem;
   }
+}
+
+/* portfolio.html */
+.project {
+  height: 270px;
+  border: 12px solid rgb(255, 255, 255);
+  box-sizing: border-box;
+  background-color: rgb(156, 19, 54);
+}
+
+.content {
+  margin: 0 auto;
+}
+
+.container-fluid {
+  width: 85%;
+  margin-bottom: 100px;
 }
