--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -224,14 +224,14 @@ header .button {
   padding: 20px;
   z-index: 7;
   display: none;
-  background-color: rgb(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .email {
   position: fixed;
   top: 64px;
   right: 40px;
-  padding: 20px;
+  padding: 21px;
   z-index: 6;
   display: none;
   background-color: rgb(255, 255, 255, 0.9);
@@ -240,7 +240,7 @@ header .button {
 .email-tablet {
   display: none;
   position: fixed;
-  top: 210px;
+  top: 209px;
   width: 100%;
   text-align: center;
   background-color: rgba(156, 19, 54, 1);
@@ -424,14 +424,24 @@ footer {
   height: 270px;
   border: 12px solid rgb(255, 255, 255);
   box-sizing: border-box;
-  background-color: rgb(156, 19, 54);
-}
-
-.content {
-  margin: 0 auto;
 }
 
 .container-fluid {
   width: 85%;
   margin-bottom: 100px;
+}
+
+.project.one,
+.project.five,
+.project.two,
+.project.four {
+  background-image: url("../../resources/images/test.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.project.six,
+.project.three {
+  background-color: red;
 }
