--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -170,7 +170,7 @@ header .button {
   }
 
   h3 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 
   header.box {
@@ -321,7 +321,7 @@ header .button {
 .content {
   position: relative;
   top: 79px;
-  max-width: 1200px;
+  max-width: 1280px;
   min-height: 600px;
   margin: 0 auto;
   padding: 40px 0 80px 0;
@@ -367,6 +367,7 @@ header .button {
 @media only screen and (min-width: 481px) and (max-width: 1030px) {
   .content {
     top: 181px;
+    min-height: 1470px;
   }
 
   .intro {
@@ -375,7 +376,7 @@ header .button {
 
   .quote {
     font-size: 1rem;
-    width: 80%;
+    width: 60%;
   }
 
 }
@@ -475,7 +476,7 @@ footer {
 }
 
 .project.one {
-  background-image: url("../../resources/images/test.png");
+  background-image: url("../../resources/images/mastbos.png");
 }
 
 .project.blank {
@@ -502,4 +503,33 @@ footer {
     color: rgb(156, 19, 54);
     font-size: 1.8rem;
   }
+}
+
+/* portfolio pages */
+.image-box {
+  overflow: scroll;
+  margin-bottom: 40px;
+}
+
+img.large {
+  width: 100%;
+}
+
+img.small {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.text-box p {
+  margin-bottom: 20px;
+}
+
+.text-box {
+  width: 70%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 1030px) {
+
 }
