--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -558,6 +558,12 @@ img.small {
   width: 99%;
 }
 
+.background {
+  padding-top: 40px;
+  margin-bottom: 50px;
+  background-color: rgba(250, 250, 250, 1);
+}
+
 @media only screen and (max-width: 1030px) {
   .text-box {
     width: 80%;
