--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,8 @@ body {
   font-family: "Work Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  hyphens: none
+  hyphens: none;
+  background-image: url("../../resources/images/background.png");
 }
 
 .box {
@@ -66,7 +67,8 @@ header.box {
   justify-content: space-between;
   position: fixed;
   top: 0;
-  background-color: white;
+  /*background-color: rgb(255, 255, 255);*/
+  background-image: url("../../resources/images/background.png");
   z-index: 5
 }
 
@@ -224,12 +226,13 @@ header .button {
 .introduction {
   width: 820px;
   position: fixed;
-  top: 129px;
+  top: 150px;
   left: 40px;
   padding: 20px;
   z-index: 7;
   display: none;
-  background-color: rgba(255, 255, 255, 0.8);
+  /*background-color: rgba(255, 255, 255, 0.8);*/
+  background-image: url("../../resources/images/background-transparent.png");
 }
 
 .email {
@@ -240,7 +243,8 @@ header .button {
   padding-top: 5px;
   z-index: 6;
   display: none;
-  background-color: rgb(255, 255, 255, 0.9);
+  /*background-color: rgb(255, 255, 255, 0.9);*/
+  background-image: url("../../resources/images/background-transparent.png");
 }
 
 .email-tablet {
@@ -561,12 +565,6 @@ img.small {
 
 .gallery img {
   width: 99%;
-}
-
-.background {
-  padding-top: 40px;
-  margin-bottom: 50px;
-  background-color: rgba(250, 250, 250, 1);
 }
 
 @media only screen and (max-width: 1030px) {
