Add page sinful dark chocolate

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,7 +67,6 @@ header.box {
   justify-content: space-between;
   position: fixed;
   top: 0;
-  /*background-color: rgb(255, 255, 255);*/
   background-image: url("../../resources/images/background.png");
   z-index: 5
 }
@@ -150,6 +149,7 @@ header .button {
 
 .language {
   color: rgb(156, 19, 54);
+  display: none;
   /*display: none;*/
 }
 
@@ -231,7 +231,6 @@ header .button {
   padding: 20px;
   z-index: 7;
   display: none;
-  /*background-color: rgba(255, 255, 255, 0.8);*/
   background-image: url("../../resources/images/background-transparent.png");
 }
 
@@ -243,7 +242,6 @@ header .button {
   padding-top: 5px;
   z-index: 6;
   display: none;
-  /*background-color: rgb(255, 255, 255, 0.9);*/
   background-image: url("../../resources/images/background-transparent.png");
 }
 
@@ -270,12 +268,12 @@ header .button {
   padding: 30px 20px 20px 20px;
   position: fixed;
   top: 65px;
-  left: 49.6%;
+  left: 55%;
   z-index: 7;
   font-family : "Sigmar One";
   font-size: 1.1rem;
   color: rgb(255, 255, 255);
-  width: 280px;
+  width: 284px;
   display: none;
 }
 
@@ -491,6 +489,10 @@ footer {
 
 .project.six {
   background-color: rgba(156, 19, 54, 1);;
+}
+
+.project.seven {
+  background-image: url("../../resources/images/sinful-dark-chocolate.png");
 }
 
 .project.blank {
