--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,7 @@ body {
   line-height: 1.5;
   hyphens: none;
   background-image: url("../../resources/images/background.png");
+  /*background-attachment: fixed;*/
 }
 
 .box {
