--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,6 +64,7 @@ a:visited {
 
 /* header */
 header {
+  max-width: 1440px;
   display: flex;
   align-items: center;
   justify-content: space-between;
