--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,6 +72,7 @@ header {
   top: 0;
   background-image: url("../../resources/images/background.png");
   z-index: 5;
+  text-align: center;
 }
 
 .logo {
