Add swiss roll page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -517,6 +517,10 @@ footer {
   background-image: url("../../resources/images/ritek.png");
 }
 
+.project.ten {
+  background-image: url("../../resources/images/swiss-roll-icon.png");
+}
+
 .project.blank {
   height: 100px;
 }
