--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -502,7 +502,7 @@ footer {
 }
 
 .project.six {
-  background-color: rgba(156, 19, 54, 1);;
+  background-image: url("../../resources/images/down-icon.png");
 }
 
 .project.seven {
