Change cover icons

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -482,47 +482,48 @@ footer {
 }
 
 .project.one {
-  background-image: url("../../resources/images/mastbos.png");
+  background-image: url("../../resources/images/mastbos.jpg");
 }
 
 .project.two {
-  background-image: url("../../resources/images/creatures.png");
+  background-image: url("../../resources/images/creatures.jpg");
 }
 
 .project.three {
-  background-image: url("../../resources/images/aria-sicura.png");
+  background-image: url("../../resources/images/aria-sicura.jpg");
 }
 
 .project.four {
-  background-image: url("../../resources/images/watercolour-palette.png");
+  background-image: url("../../resources/images/watercolour-palette.jpg");
 }
 
 .project.five {
-  background-image: url("../../resources/images/portfolio-website.png");
+  background-image: url("../../resources/images/portfolio-website.jpg");
 }
 
 .project.six {
-  background-image: url("../../resources/images/down-icon.png");
+  background-image: url("../../resources/images/down-icon.jpg");
 }
 
+
 .project.seven {
-  background-image: url("../../resources/images/sinful-dark-chocolate.png");
+  background-image: url("../../resources/images/sinful-dark-chocolate.jpg");
 }
 
 .project.eight {
-  background-image: url("../../resources/images/milk-blue.png");
+  background-image: url("../../resources/images/milk-blue.jpg");
 }
 
 .project.nine {
-  background-image: url("../../resources/images/ritek.png");
+  background-image: url("../../resources/images/ritek.jpg");
 }
 
 .project.ten {
-  background-image: url("../../resources/images/swiss-roll-icon.png");
+  background-image: url("../../resources/images/swiss-roll-icon.jpg");
 }
 
 .project.eleven {
-  background-image: url("../../resources/images/monster-icon.gif");
+  background-image: url("../../resources/images/monster-icon.jpg");
 }
 
 .project.twelve {
@@ -530,7 +531,7 @@ footer {
 }
 
 .project.thirteen {
-  background-image: url("../../resources/images/digital-drawing-icon.png");
+  background-image: url("../../resources/images/digital-drawing-icon.jpg");
 }
 
 .project.blank {
