Add skills and languages

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,6 +62,14 @@ a:visited {
   color: inherit;
 }
 
+span.red {
+  color : rgb(156, 19, 54);
+}
+
+span.gray {
+  color: rgba(128, 128, 128, 1);
+}
+
 /* header */
 header {
   display: flex;
