Link nouveau page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -561,6 +561,7 @@ header .button {
 
 .project.three {
   background-image: url("../../resources/images/aria-sicura.jpg");
+  display: none;
 }
 
 .project.four {
@@ -616,6 +617,10 @@ header .button {
 
 .project.sixteen {
   background-image: url("../../resources/images/granny-bike-icon.jpg");
+}
+
+.project.seventeen {
+  background-image: url("../../resources/images/nouveau-icon.jpg");
 }
 
 .project.blank {
