--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,8 @@ body {
 }
 
 h1 {
-  font-family : "Titan One", sans-serif;
+  font-family : "Work Sans", sans-serif;
+  font-weight: 900;
   font-size : 4rem;
   line-height : 1;
   color : rgb(156, 19, 54);
@@ -129,7 +130,7 @@ header .button {
 .language {
   padding: 7px 10px;
   margin: 0 8px;
-  font-family: "Sigmar One", sans-serif;
+  font-family: "Work Sans", sans-serif;
   color: white;
   font-size: 1.1rem;
   display: inline-flex;
@@ -474,8 +475,9 @@ header .button {
 }
 
 .quote {
-  font-family : "Titan One", sans-serif;
+  font-family : "Work Sans", sans-serif;
   font-size: 1rem;
+  font-weight: bold;
   width: 45%;
   margin: 30px auto;
   padding: 0 10px;
